メールの実装、環境変数を設定

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,3 +3,9 @@ require:
   - rubocop-rspec
 Style/Documentation:
   Enabled: false
+Metrics/BlockLength: #ファイルの記述量が長いのを無視
+  Exclude:
+    - 'config/environments/*.rb'
+Metrics/MethodLength: #メソッドが長いのを無視
+  Exclude:
+    - "db/migrate/*"
